# CodebaseDocumentationCrew

./: .gitignore  README.md  example.env  pyproject.toml
src/: run_code_documentation.py  run_streamlit_app.py
src/documentation_crew/: crew.py  main.py  tools.py  utils.py
src/documentation_crew/gui/: app.py
src/tools/: __init__.py  absolute_file_read_tool.py  limited_directory_read_tool.py
