[tool.poetry]
name = "codbase_documentation_crew"
version = "0.1.0"
description = "Document a codebase using CrewAI."
authors = ["Scott Turnbull <streamweaver@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "documentation_crew", from = "src" },
    { include = "tools", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "^0.41.1"
crewai-tools = "^0.4.26"
langchain = "^0.2.12"
langchain-core = "^0.2.28"
langchain-anthropic = "^0.1.22"
langchain-groq = "^0.1.9"
streamlit = "^1.37.1"
langchain-google-genai = "^1.0.8"
pillow = "^10.4.0"

[tool.poetry.scripts]
generate_documentation = "documentation_crew.main:run_code_documentation"
streamlit_app = "documentation_crew.gui.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"